k8s2/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-ingress
  namespace: microservices
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: miti.local
      http:
        paths:
          # 1) Auth-service : /auth → FastAPI
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000

          # 2) Order-service : /orders → NestJS
          - path: /orders
            pathType: Prefix
            backend:
              service:
                name: order-service
                port:
                  number: 4000

          # Movies-service : /movies → FastAPI
          - path: /movies-svc
            pathType: Prefix
            backend:
              service:
                name: movies-service
                port:
                  number: 8082

          # 3) Frontend : tout le reste → Next.js
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 3000
